--- a/src/main/resources/templates/demand.html
+++ b/src/main/resources/templates/demand.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="金融远期合约交易平台"/>
     <meta name="author" content="CL"/>
+    <link rel="shortcut icon" href="images/ico/favicon.ico"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
@@ -69,11 +70,15 @@
 
 <div class="container" style="padding-left: 30px;">
     <div class="jyfw-section row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <h3 class="jyfw-title">需求列表 <span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></h3>
             <div class="block"></div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2" style="margin-top: 28px;">
+            <input type="radio" class="radiorole" name="role" value="买方" />买方&ensp;&ensp;
+            <input type="radio" class="radiorole" name="role" value="卖方" />卖方
+        </div>
+        <div class="col-md-5">
             <div class="input-group row" style="height: 60px;">
                 <input type="text" class="form-control" id="dealObject" placeholder="请输入标的名称" style="margin-top: 20px;"/>
                 <span class="input-group-btn">
@@ -81,7 +86,7 @@
                 </span>
             </div>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-1"></div>
         <div class="col-md-2">
             <a href="demandadd.html" class="jyfw-section">
                 <div style="padding-top: 18px;">
@@ -91,18 +96,6 @@
         </div>
     </div>
 
-</div>
-
-<div >
-    <ul class="nav navbar-nav" style="text-align: center;">
-        <li>
-            <a href="#">卖方</a>
-        </li>
-        <li>
-            <a href="#">买方</a>
-        </li>
-
-    </ul>
 </div>
 
 <div class="container" id="demand-item">
@@ -149,14 +142,57 @@
         Page(1, 10);
     })
 
+    $("body").on("click", ".radiorole", function () {
+        var category = '';
+        category = $("input[name='role']:checked").val();
+        $.ajax({
+            url: '/demands',
+            data: {
+                "page": 1,
+                "count": 10,
+                "status": 1,
+                "category": category
+            },
+            type: 'POST',
+            success: function (result) {
+                if(result.success) {
+                    loadPageInfo(result.data);
+                    $("#demand-item").empty();
+                    loadPageInfo(result.data);
+                    $(result.data.list).each(function (i, item) {
+                        var pageStr = '';
+                        pageStr = pageStr + '<div class="demand-item-list">';
+                        pageStr = pageStr + '<p class="demand-item-title">需求发布人<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span><span>：'+ item.username + '</span>';
+                        pageStr = pageStr + '<span style="padding-left: 36px;">身份：<span style="font-size: 24px; color: #0615ff;">' + item.category + '</span></span></p>';
+                        pageStr = pageStr + '<div class="row">';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-object">' + item.dealObject + '</span><p class="demand-item-detail">合约标的</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-num">' + item.dealNum + '</span><p class="demand-item-detail">交易数量</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-price">' + item.dealPrice + '</span><p class="demand-item-detail">交易价格</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-num">' + timeExchange(item.dealTime) + '</span><p class="demand-item-detail">交易日期</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><span class="demand-item-object">' + demandStatusExchange(item.status) + '</span><p class="demand-item-detail">合约状态</p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"><a class="jyfw-section"><button type="button" class="btn btn-primary" onclick="confirmdemand('+ item.id + ')">请求匹配</button></a></div>';
+                        pageStr = pageStr + '</div>';
+                        pageStr = pageStr + '</div>';
+                        $("#demand-item").append(pageStr);
+                    })
+                }else {
+                    console.log("获取数据失败！");
+                }
+            }
+        })
+    })
+
     function Page(page, count) {
         var dealObject = $("#dealObject").val();
+        var category = '';
+        category = $("input[name='role']:checked").val();
         $.ajax({
             url: '/demands',
             data: {
                 "page": page,
                 "count": count,
                 "status": 1,
+                "category": category,
                 "dealObject": dealObject
             },
             type: 'POST',
