--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -122,9 +122,9 @@
                 <span class="glyphicon glyphicon-home" aria-hidden="true" style="float: left;margin: 4px 12px 4px auto;"></span>
                 <h3>数据统计</h3>
             </dt>
-            <span>累计交易额：<span class="text-danger" style="font-size: 24px">12141元</span></span>
-            <span style="margin-left: 360px;">已达成合约量：<span class="text-danger" style="font-size: 24px">12141份</span></span>
-            <span style="float: right;margin-right: 0;">累计注册人数：<span class="text-danger" style="font-size: 24px">12141人</span></span>
+            <span>累计交易额：<span class="text-danger" style="font-size: 24px" th:text="${contactAmountSum}"></span> 元</span>
+            <span style="margin-left: 360px;">已达成合约量：<span class="text-danger" style="font-size: 24px" th:text="${contactCount}"></span> 份</span>
+            <span style="float: right;margin-right: 0;">累计注册人数：<span class="text-danger" style="font-size: 24px" th:text="${userCount}"></span> 人</span>
             <hr />
         </dl>
     </div>
@@ -140,20 +140,20 @@
         </div>
 
         <div class="row services-row services-row-head services-row-1">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" th:each="contact, contactStat : ${contacts}">
                 <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
+                    <h4 class="services-title"><span th:text="${contact.dealObject}"></span>-远期合约</h4>
                     <div class="col-md-6">
-                        <p class="services-body">买方：</p>
+                        <p class="services-body">买方：<span th:text="${contact.buyername}"></span></p>
                     </div>
                     <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
+                        <p class="services-body">卖方：<span th:text="${contact.sellername}"></span></p>
                     </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                    <p style="text-align: left; padding-left: 30px;">合约标的：<span th:text="${contact.dealObject}"></span></p>
+                    <p style="text-align: left; padding-left: 30px;">交易数量：<span th:text="${contact.dealNum}"></span></p>
+                    <p style="text-align: left; padding-left: 30px;">交易总价：<span th:text="${contact.dealprice}"></span></p>
+                    <p style="text-align: left; padding-left: 30px;">交易时间：<span class="dealtime" th:attr="data-dealtime=''+${contact.dealTime}"></span></p>
+                    <p style="text-align: left; padding-left: 30px;">附加条款：<span th:text="${contact.desc}"></span></p>
                 </div>
             </div>
 
@@ -623,7 +623,14 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
-<script>
+<script src="js/app.js"></script>
+<script type="text/javascript">
+    //时间处理
+    $(function () {
+        var dealtime = $(".dealtime").attr("data-dealtime");
+        $(".dealtime").html(timeExchange(dealtime));
+    })
+
     new WOW().init();
 </script>
 </body>
