--- a/src/main/resources/templates/mycontact.html
+++ b/src/main/resources/templates/mycontact.html
@@ -5,14 +5,14 @@
     <title>金融远期合约交易服务平台</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content=""/>
-    <meta name="author" content=""/>
+    <meta name="author" content="CL"/>
+    <link rel="shortcut icon" href="images/ico/favicon.ico"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
     <link rel="shortcut icon" href="images/ico/favicon.ico"/>
     <link rel="stylesheet" href="css/buttons.css"/>
-    <!--以下必要样式-->
     <link rel="stylesheet" href="css/paper-collapse.min.css"/>
 
 </head>
@@ -78,54 +78,20 @@
 <div class="container text-center">
 
     <div class="row services-row services-row-head services-row-1">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" th:each="contact, contactStat : ${contacts}">
             <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                <h4 class="services-title">合约名称</h4>
+                <h4 class="services-title"><span th:text="${contact.dealObject}"></span>-远期合约</h4>
                 <div class="col-md-6">
-                    <p class="services-body">买方：</p>
+                    <p class="services-body">买方：<span th:text="${contact.buyername}"></span></p>
                 </div>
                 <div class="col-md-6">
-                    <p class="services-body">卖方：</p>
+                    <p class="services-body">卖方：<span th:text="${contact.sellername}"></span></p>
                 </div>
-                <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-            </div>
-        </div>
-
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                <h4 class="services-title">合约名称</h4>
-                <div class="col-md-6">
-                    <p class="services-body">买方：</p>
-                </div>
-                <div class="col-md-6">
-                    <p class="services-body">卖方：</p>
-                </div>
-                <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-            </div>
-        </div>
-
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-            <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                <h4 class="services-title">合约名称</h4>
-                <div class="col-md-6">
-                    <p class="services-body">买方：</p>
-                </div>
-                <div class="col-md-6">
-                    <p class="services-body">卖方：</p>
-                </div>
-                <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                <p style="text-align: left; padding-left: 30px;">附加条款：</p>
+                <p style="text-align: left; padding-left: 30px;">合约标的：<span th:text="${contact.dealObject}"></span></p>
+                <p style="text-align: left; padding-left: 30px;">交易数量：<span th:text="${contact.dealNum}"></span></p>
+                <p style="text-align: left; padding-left: 30px;">交易总价：<span th:text="${contact.dealprice}"></span></p>
+                <p style="text-align: left; padding-left: 30px;">交易时间：<span class="dealtime" th:attr="data-dealtime=''+${contact.dealTime}"></span></p>
+                <p style="text-align: left; padding-left: 30px;">附加条款：<span th:text="${contact.desc}"></span></p>
             </div>
         </div>
     </div>
@@ -141,8 +107,15 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/paper-collapse.min.js"></script>
 <script type="text/javascript">
+
+    $(function () {
+        var dealtime = $(".dealtime").attr("data-dealtime");
+        $(".dealtime").html(timeExchange(dealtime));
+    })
+
     new WOW().init();
     $('.collapse-card').paperCollapse();
 </script>
