--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
                 <h3>数据统计</h3>
             </dt>
             <span>累计交易额：<span class="text-danger" style="font-size: 24px" th:text="${contactAmountSum}"></span> 元</span>
-            <span style="margin-left: 360px;">已达成合约量：<span class="text-danger" style="font-size: 24px" th:text="${contactCount}"></span> 份</span>
+            <span style="margin-left: 360px;">已生成合约量：<span class="text-danger" style="font-size: 24px" th:text="${contactCount}"></span> 份</span>
             <span style="float: right;margin-right: 0;">累计注册人数：<span class="text-danger" style="font-size: 24px" th:text="${userCount}"></span> 人</span>
             <hr />
         </dl>
