--- a/src/main/resources/templates/admincomments.html
+++ b/src/main/resources/templates/admincomments.html
@@ -46,7 +46,6 @@
                     <li><a href="/adminpage"><i class="glyphicon glyphicon-calendar"></i>需求信息在线监控</a></li>
                     <li><a href="/admintopic"><i class="glyphicon glyphicon-calendar"></i>话题信息在线监控</a></li>
                     <li class="current"><a href="/admincomments"><i class="glyphicon glyphicon-calendar"></i>评论信息在线监控</a></li>
-                    <li><a href="/adminusers"><i class="glyphicon glyphicon-calendar"></i>用户列表</a></li>
                     <li><a href="/adminerlist"><i class="glyphicon glyphicon-list"></i> 管理员列表</a></li>
                     <li><a href="/admineradd"><i class="glyphicon glyphicon-plus-sign"></i> 添加管理员</a></li>
                     <li><a href="/adminerdelete"><i class="glyphicon glyphicon-remove-sign"></i>删除管理员</a></li>
@@ -75,7 +74,8 @@
                             <tr th:each="comment, commentStat : ${comments}">
                                 <td th:text="${comment.id}">1</td>
                                 <td th:text="${comment.content}"></td>
-                                <td id="status" th:text="${comment.status}"></td>
+                                <td th:if="${comment.status == 2}">违规，已删除</td>
+                                <td th:if="${comment.status == 1}">正常显示</td>
                                 <td>
                                     <a th:href="'deleteComment?CommentId='+${comment.id}">删除</a>
                                 </td>
@@ -99,9 +99,8 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-
+<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 
 </html>
