--- a/src/main/resources/templates/adminpage.html
+++ b/src/main/resources/templates/adminpage.html
@@ -46,7 +46,6 @@
                     <li class="current"><a href="/adminpage"><i class="glyphicon glyphicon-calendar"></i>需求信息在线监控</a></li>
                     <li><a href="/admintopic"><i class="glyphicon glyphicon-calendar"></i>话题信息在线监控</a></li>
                     <li><a href="/admincomments"><i class="glyphicon glyphicon-calendar"></i>评论信息在线监控</a></li>
-                    <li><a href="/adminusers"><i class="glyphicon glyphicon-calendar"></i>用户列表</a></li>
                     <li><a href="/adminerlist"><i class="glyphicon glyphicon-list"></i> 管理员列表</a></li>
                     <li><a href="/admineradd"><i class="glyphicon glyphicon-plus-sign"></i> 添加管理员</a></li>
                     <li><a href="/adminerdelete"><i class="glyphicon glyphicon-remove-sign"></i>删除管理员</a></li>
@@ -81,7 +80,9 @@
                                 <td th:text="${demand.dealNum}"></td>
                                 <td th:text="${demand.dealPrice}"></td>
                                 <td th:text="${demand.desc}"></td>
-                                <td th:text="${demand.status}"></td>
+                                <td th:if="${demand.status == 1}">正常显示</td>
+                                <td th:if="${demand.status == 2}">已匹配成功</td>
+                                <td th:if="${demand.status == 3}">违规，已删除</td>
                                 <td>
                                     <a th:href="'deleteDemand?demandId='+${demand.id}">删除</a>
                                 </td>
