--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -10,12 +10,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/animate.min.css"/>
-    <link rel="stylesheet" type="text/css" media="all" href="css/style-projects.css"/>
-    <link rel="shortcut icon" href="assets/ico/favicon.ico"/>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png"/>
-    <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png"/>
+    <link rel="shortcut icon" href="images/ico/favicon.ico"/>
 </head>
 
 <body>
@@ -79,112 +74,23 @@
 <!--End Header -->
 
 
-<!-- Main Container -->
-
 <div id="banners"></div>
 <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" id="contact">
             <div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                    <h4>
-                        合约名称
-                    </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
-            </div>
-            <div class="blockquote-box blockquote-primary animated wow fadeInLeft clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member1.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                <h4>
-                    合约名称
-                </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
-            </div>
-            <div class="blockquote-box blockquote-success animated wow fadeInLeft clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                    <h4>
-                        合约名称
-                    </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="blockquote-box blockquote-danger animated wow fadeInRight clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member3.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                    <h4>
-                        合约名称
-                    </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
-            </div>
-            <div class="blockquote-box blockquote-warning animated wow fadeInRight clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                <h4>
-                    合约名称
-                </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
-            </div>
-            <div class="blockquote-box animated wow fadeInRight clearfix">
-                <div class="square pull-left">
-                    <img src="images/team/member1.png" alt="Feature-img" height="80" width="100"/>
-                </div>
-                <a href="contactdetail.html">
-                    <h4>
-                        合约名称
-                    </h4>
-                </a>
-                <p>
-                    买方 , 卖方
-                </p>
-                <p>
-                    交割日期
-                </p>
+                <div class="square pull-left"><img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/></div>
+                <a href="contactdetail.html"><h4>合约名称</h4></a>
+                <p>买方 , 卖方</p>
+                <p>交割日期</p>
             </div>
         </div>
     </div>
+</div>
+
+<div class="container pages text-right">
+    <ul class="pagination">
+    </ul>
 </div>
 
 <div class="copyright text center">
@@ -195,8 +101,42 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/wow.min.js"></script>
+<script src="js/app.js"></script>
 <script>
     new WOW().init();
+
+    $(function () {
+
+        Page(1, 10);
+
+    })
+
+    function Page(page, count) {
+        $.ajax({
+            url: '/listCompleteContact',
+            data: {
+                "page": page,
+                "count": count
+            },
+            type: "GET",
+            success: function (result) {
+                if(result.success) {
+                    $("#contact").empty();
+                    loadPageInfo(result.data);
+                    $(result.data.list).each(function (i, item) {
+                        var pageStr = '';
+                        pageStr = pageStr + '<div class="blockquote-box blockquote-info animated wow fadeInLeft clearfix">';
+                        pageStr = pageStr + '<div class="square pull-left"><img src="images/team/member2.png" alt="Feature-img" height="80" width="100"/></div>';
+                        pageStr = pageStr + '<a href="/getcontact?cid='+ item.id +'"><h4>合约名称'+ item.dealObject +'</h4></a>';
+                        pageStr = pageStr + '<p>买方: '+ item.sellername +' , 卖方: '+ item.buyername +'</p>';
+                        pageStr = pageStr + '<p>交割日期: '+ timeExchange(item.dealTime) +'</p>';
+                        pageStr = pageStr + '</div>';
+                        $("#contact").append(pageStr);
+                    })
+                }
+            }
+        })
+    }
 </script>
 
 </body>
