--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,7 +74,6 @@
                 <ol class="carousel-indicators visible-lg">
                     <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
                     <li data-target="#carousel-1" data-slide-to="1"></li>
-                    <li data-target="#carousel-1" data-slide-to="2"></li>
                 </ol>
 
                 <div class="carousel-inner" role="listbox">
@@ -94,13 +93,6 @@
                         </div>
                     </div>
 
-                    <div class="item">
-                        <img src="images/slider/sliderm3.jpg" height="400" alt="Image of second carousel"/>
-                        <div class="carousel-caption">
-                            <a href="#" class="button button-glow button-border button-rounded button-primary carousel-title hidden-xs">智能匹配</a>
-                            <p class="carousel-body">快速定位你可能喜欢的</p>
-                        </div>
-                    </div>
 
                 </div>
 
@@ -149,6 +141,12 @@
                     <div class="col-md-6">
                         <p class="services-body">卖方：<span th:text="${contact.sellername}"></span></p>
                     </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：<span th:text="${contact.buyername}"></span></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：<span th:text="${contact.sellername}"></span></p>
+                    </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：<span th:text="${contact.dealObject}"></span></p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：<span th:text="${contact.dealNum}"></span></p>
                     <p style="text-align: left; padding-left: 30px;">交易总价：<span th:text="${contact.dealprice}"></span></p>
@@ -166,6 +164,12 @@
                     <div class="col-md-6">
                         <p class="services-body">卖方：</p>
                     </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：</p>
+                    </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：</p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：</p>
                     <p style="text-align: left; padding-left: 30px;">交易总价：</p>
@@ -182,6 +186,12 @@
                     </div>
                     <div class="col-md-6">
                         <p class="services-body">卖方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：</p>
                     </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：</p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：</p>
@@ -202,6 +212,12 @@
                     <div class="col-md-6">
                         <p class="services-body">卖方：</p>
                     </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：</p>
+                    </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：</p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：</p>
                     <p style="text-align: left; padding-left: 30px;">交易总价：</p>
@@ -219,6 +235,12 @@
                     <div class="col-md-6">
                         <p class="services-body">卖方：</p>
                     </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：</p>
+                    </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：</p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：</p>
                     <p style="text-align: left; padding-left: 30px;">交易总价：</p>
@@ -235,6 +257,12 @@
                     </div>
                     <div class="col-md-6">
                         <p class="services-body">卖方：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">买方电话：</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="services-body">卖方电话：</p>
                     </div>
                     <p style="text-align: left; padding-left: 30px;">合约标的：</p>
                     <p style="text-align: left; padding-left: 30px;">交易数量：</p>
