--- a/src/main/resources/templates/mycontact.html
+++ b/src/main/resources/templates/mycontact.html
@@ -81,16 +81,24 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" th:each="contact, contactStat : ${contacts}">
             <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                 <h4 class="services-title"><span th:text="${contact.dealObject}"></span>-远期合约</h4>
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <p class="services-body">买方：<span th:text="${contact.buyername}"></span></p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-8">
+                    <p class="services-body">电话：<span th:text="${contact.buyername}"></span></p>
+                </div>
+                <div class="col-md-4">
                     <p class="services-body">卖方：<span th:text="${contact.sellername}"></span></p>
                 </div>
+                <div class="col-md-8">
+                    <p class="services-body">电话：<span th:text="${contact.sellername}"></span></p>
+                </div>
+
                 <p style="text-align: left; padding-left: 30px;">合约标的：<span th:text="${contact.dealObject}"></span></p>
                 <p style="text-align: left; padding-left: 30px;">交易数量：<span th:text="${contact.dealNum}"></span></p>
                 <p style="text-align: left; padding-left: 30px;">交易总价：<span th:text="${contact.dealprice}"></span></p>
-                <p style="text-align: left; padding-left: 30px;">交易时间：<span class="dealtime" th:attr="data-dealtime=''+${contact.dealTime}"></span></p>
+                <p style="text-align: left; padding-left: 30px;">交易时间：<span class="dealtime" th:attr="data-dealtime=''+${contact.dealTime}"></span>
+                </p>
                 <p style="text-align: left; padding-left: 30px;">附加条款：<span th:text="${contact.desc}"></span></p>
             </div>
         </div>
