--- a/src/main/resources/templates/topicdiscuss.html
+++ b/src/main/resources/templates/topicdiscuss.html
@@ -173,7 +173,7 @@
             success: function (result) {
                 if(result.success) {
                     alert("评论成功！");
-                    window.location.href = '/demand';
+                    window.location.href = '/topic';
                 }
             }
         })
