--- a/src/main/resources/templates/mycontact.html
+++ b/src/main/resources/templates/mycontact.html
@@ -85,13 +85,13 @@
                     <p class="services-body">买方：<span th:text="${contact.buyername}"></span></p>
                 </div>
                 <div class="col-md-8">
-                    <p class="services-body">电话：<span th:text="${contact.buyername}"></span></p>
+                    <p class="services-body">电话：<span th:text="${contact.buyerphone}"></span></p>
                 </div>
                 <div class="col-md-4">
                     <p class="services-body">卖方：<span th:text="${contact.sellername}"></span></p>
                 </div>
                 <div class="col-md-8">
-                    <p class="services-body">电话：<span th:text="${contact.sellername}"></span></p>
+                    <p class="services-body">电话：<span th:text="${contact.sellerphone}"></span></p>
                 </div>
 
                 <p style="text-align: left; padding-left: 30px;">合约标的：<span th:text="${contact.dealObject}"></span></p>
