--- a/src/main/resources/templates/demandadd.html
+++ b/src/main/resources/templates/demandadd.html
@@ -113,7 +113,7 @@
             </div>
             <div class="aui-form-group clear">
                 <label class="aui-label-control">
-                    交易价格 <em>*</em>
+                    交易总价 ¥ <em>*</em>
                 </label>
                 <div class="aui-form-input" style="padding-bottom: 15px;">
                     <input type="number" th:field="*{dealPrice}" class="form-control" placeholder="请输入交易价格" required="required"/>
@@ -121,7 +121,7 @@
             </div>
             <div class="aui-form-group clear">
                 <label class="aui-label-control">
-                    具体描述 <em>*</em>
+                    其他条款 <em>*</em>
                 </label>
                 <div class="aui-form-input" style="padding-bottom: 15px;">
                     <textarea  th:field="*{desc}" class="form-control" minlength="5">请用简短的文字描述您的合约产品</textarea>
