--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -133,7 +133,7 @@
 
         <div class="row services-row services-row-head services-row-1">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" th:each="contact, contactStat : ${contacts}">
-                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
+                <div class="services-group wow animated fadeInLeft" data-wow-offset="40" style="height: 380px; padding-top: 38px;">
                     <h4 class="services-title"><span th:text="${contact.dealObject}"></span>-远期合约</h4>
                     <div class="col-md-4">
                         <p class="services-body">买方：<span th:text="${contact.buyername}"></span></p>
@@ -154,125 +154,7 @@
                     <p style="text-align: left; padding-left: 30px;">附加条款：<span th:text="${contact.desc}"></span></p>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
-                    <div class="col-md-6">
-                        <p class="services-body">买方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">买方电话：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方电话：</p>
-                    </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
-                    <div class="col-md-6">
-                        <p class="services-body">买方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">买方电话：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方电话：</p>
-                    </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-                </div>
-            </div>
         </div>
-
-        <div class="row services-row services-row-tail services-row-2">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
-                    <div class="col-md-6">
-                        <p class="services-body">买方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">买方电话：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方电话：</p>
-                    </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
-                    <div class="col-md-6">
-                        <p class="services-body">买方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">买方电话：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方电话：</p>
-                    </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">合约条款：</p>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                    <h4 class="services-title">合约名称</h4>
-                    <div class="col-md-6">
-                        <p class="services-body">买方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">买方电话：</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="services-body">卖方电话：</p>
-                    </div>
-                    <p style="text-align: left; padding-left: 30px;">合约标的：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易数量：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易总价：</p>
-                    <p style="text-align: left; padding-left: 30px;">交易时间：</p>
-                    <p style="text-align: left; padding-left: 30px;">附加条款：</p>
-                </div>
-            </div>
-        </div>
-
     </div>
 </section>
 
