--- a/src/main/resources/templates/mytopic.html
+++ b/src/main/resources/templates/mytopic.html
@@ -76,35 +76,26 @@
 </div>
 
 
-    <div class="topic-discuss-title ">
+<div class="container" id="topic">
+    <div class="demand-item-list">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-6" style="padding-left: 30px; padding-top: 15px;">
-                <p class="demand-item-title topic-title">话题名称</p>
+            <div class="col-md-8">
+                <p class="demand-item-title">话题名称<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p>
             </div>
-            <div class="col-md-2" style="padding-top: 10px;">
+            <div class="col-md-2">
                 <p class="demand-item-detail">用户名</p>
             </div>
-            <div class="col-md-2" style="padding-top: 10px;">
-                <p class="demand-item-detail date">发布时间</p>
+            <div class="col-md-2">
+                <p class="demand-item-detail">发布时间</p>
             </div>
+        </div><p>话题描述......</p>
+        <div class="demand-item-detail row">
+            <div class="col-md-8"></div><div class="col-md-1">xx条评论</div><div class="col-md-1">点赞</div>
+            <div class="col-md-2" style="padding-bottom: 15px;"><a href="topicdiscuss.html">参与讨论</a></div>
         </div>
-        <p style="padding-left: 245px;" >话题描述......</p>
-        <hr/>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-6">
-                <p style="padding-left: 15px;">评论内容1</p>
-            </div>
-            <div class="col-md-2 demand-item-detail">用户名</div>
-            <div class="col-md-2 demand-item-detail date">发布时间</div>
-        </div>
-        <div class="row">
-            <div class="col-md-10"></div>
-            <div class="col-md-2 demand-item-detail date">回复</div>
-        </div>
-        <hr/>
     </div>
+
+</div>
 
 <div class="copyright text-center" style="margin-top: 30px;">
     <p>Copyright &copy; 2018.交易服务 All rights reserved.</p>
@@ -114,8 +105,42 @@
 <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/paper-collapse.min.js"></script>
 <script type="text/javascript">
+
+    $(function () {
+        getMyTopics();
+    })
+
+    function getMyTopics() {
+        var topicName = $("#topicName").val();
+        $.ajax({
+            url: '/mytopics',
+            data: {},
+            type: "POST",
+            success: function (result) {
+                if(result.success) {
+                    $("#topic").empty();
+                    $(result.data.list).each(function (i, item) {
+                        var pageStr = '';
+                        pageStr = pageStr + '<div class="demand-item-list">';
+                        pageStr = pageStr + '<div class="row"><div class="col-md-8"><p class="demand-item-title">' + item.topicName + '<span class="demand-hot-icon glyphicon glyphicon-hand-right"></span></p></div>';
+                        pageStr = pageStr + '<div class="col-md-2"></div><div class="col-md-2"><p class="demand-item-detail">'+ timeExchange(item.createTime) +'</p></div>';
+                        pageStr = pageStr + '</div><p>'+ item.content +'</p>';
+                        pageStr = pageStr + '<div class="demand-item-detail row">';
+                        pageStr = pageStr + '<div class="col-md-12 text-right" style="padding-bottom: 15px; color: blue;"><a class="" href="/topicdiscuss?topicId=' + item.id + '">查看评论</a></div>';
+                        pageStr = pageStr + '</div>';
+                        pageStr = pageStr + '</div>';
+                        $("#topic").append(pageStr);
+                    })
+                }else {
+                    console.log("获取数据失败！");
+                }
+            }
+        })
+    }
+
     new WOW().init();
     $('.collapse-card').paperCollapse();
 </script>
